# GoalsARMPython

./: .gitignore  CMakeLists.txt  README.md  calibrate.py  pyproject.toml  simulate.py
.github/workflows/: test.yml
inputs/: example-females.csv  example-inputs-mtct.xlsx  example-inputs.xlsx  mixing_weight_sensitivity.csv  num_partners_sensitivity.csv  same_sex_var_sensitivity.csv  sex_acts_sensitivity.csv
outputs/sensitivity/mixing_weights/: infections_0.csv  infections_1.csv  infections_10.csv  infections_11.csv  infections_12.csv  infections_13.csv  infections_14.csv  infections_15.csv  infections_16.csv  infections_17.csv  infections_18.csv  infections_19.csv  infections_2.csv  infections_20.csv  infections_21.csv  infections_22.csv  infections_23.csv  infections_24.csv  infections_25.csv  infections_26.csv  infections_27.csv  infections_28.csv  infections_29.csv  infections_3.csv  infections_30.csv  infections_31.csv  infections_32.csv  infections_33.csv  infections_34.csv  infections_35.csv  infections_36.csv  infections_37.csv  infections_38.csv  infections_39.csv  infections_4.csv  infections_40.csv  infections_41.csv  infections_42.csv  infections_43.csv  infections_44.csv  (+22 more)
outputs/sensitivity/mixing_weights/plots/: plotting_script.R
outputs/sensitivity/num_partners/: key.csv
outputs/sensitivity/same_sex_var/: infections_0.csv  infections_1.csv  infections_10.csv  infections_11.csv  infections_12.csv  infections_13.csv  infections_14.csv  infections_2.csv  infections_3.csv  infections_4.csv  infections_5.csv  infections_6.csv  infections_7.csv  infections_8.csv  infections_9.csv  key.csv
outputs/sensitivity/same_sex_var/plots/: plotting_script.R
scripts/: calibrate.py  compile.py  simulate.py  vertical.py
src/: goals_const.py  goals_model.py  goals_utils.py
src/goals/: __about__.py  __init__.py  goals_const.py  goals_model.py  goals_results.py  goals_utils.py
src/goals_proj/: goals_proj.cpp  goals_proj.h  goals_proj.vcxproj
tests/: conftest.py  test_goals_excel.py  test_goals_init.py  test_memory_sharing.py
